DTSPB-5609 upgrade Elasticsearch v9